--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -91,7 +91,25 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="0.5" />
+            <Button
+                android:id="@+id/UplaodImage"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:onClick="UplaodImage"
+                android:text="UplaodImage"
+                tools:ignore="OnClick">
+            </Button>
 
+            <ImageView
+                android:id="@+id/MyImage"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:src="@mipmap/ic_launcher_round" >
+            </ImageView>
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.5" />
             <Button
                 android:id="@+id/btnToLogin"
                 android:layout_width="200dp"
