--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -7,167 +7,165 @@
     android:background="#f5f5f5"
     tools:context=".Profile">
 
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="@+id/linearLayout4"
-        app:layout_constraintTop_toTopOf="@+id/linearLayout4"
-        app:srcCompat="@drawable/top_bcakground" />
-
-    <LinearLayout
-        android:id="@+id/linearLayout4"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <TextView
-            android:id="@+id/textView3"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="My Profile"
-            android:textSize="40dp"
-            android:textStyle="bold"
-
-
-
-
-
-
-
-            />
 
         <ImageView
-            android:id="@+id/imageView6"
-            android:layout_width="255dp"
-            android:layout_height="78dp"
-            android:layout_gravity="center"
-            android:foregroundGravity="center"
-            app:srcCompat="@drawable/hobbies" />
-
-        <ImageView
-            android:id="@+id/imageView7"
+            android:id="@+id/imageView2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:srcCompat="@drawable/profile"
-            android:layout_gravity="center"
-            />
+            app:layout_constraintStart_toStartOf="@+id/linearLayout4"
+            app:layout_constraintTop_toTopOf="@+id/linearLayout4"
+            app:srcCompat="@drawable/top_bcakground" />
 
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="280dp"
-        android:layout_marginEnd="24dp"
-        android:background="@drawable/background_white"
-        android:elevation="10dp"
-        android:orientation="vertical"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <TextView
-            android:id="@+id/textView6"
+        <LinearLayout
+            android:id="@+id/linearLayout4"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="Notifiction"
-            android:textSize="25dp"
-            android:textStyle="bold" />
+            android:layout_height="0dp"
+            android:orientation="vertical"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <TextView
+                android:id="@+id/textView3"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="My Profile"
+                android:textSize="40dp"
+                android:textStyle="bold"
+                />
+
+            <ImageView
+                android:id="@+id/imageView6"
+                android:layout_width="255dp"
+                android:layout_height="78dp"
+                android:layout_gravity="center"
+                android:foregroundGravity="center"
+                app:srcCompat="@drawable/hobbies" />
+
+            <ImageView
+                android:id="@+id/imageView7"
+                android:layout_width="250dp"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="100dp"
+                android:layout_alignParentLeft="true"
+
+
+                android:scaleType="fitCenter"
+                app:srcCompat="@drawable/profile" />
+
+
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_margin="10dp"
-            android:elevation="5dp"
-            android:orientation="vertical">
-
-
-
-
-            <ImageView
-                android:id="@+id/imageView5"
-                android:layout_width="54dp"
-                android:layout_height="60dp"
-                android:layout_margin="10dp"
-                android:background="@drawable/background_grey"
-                android:layout_gravity="center"
-                app:srcCompat="@drawable/editprofile_icon"
-                />
-
-
-            <EditText
-            android:id="@+id/MyNameTextView"
-            android:layout_width="194dp"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:text="My name:"
-            android:textSize="40sp"
-            android:textStyle="bold|italic" />
-
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="280dp"
+            android:layout_marginEnd="24dp"
+            android:background="@drawable/background_white"
+            android:elevation="10dp"
+            android:orientation="vertical"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
             <TextView
-                android:id="@+id/MyEmailTextView"
-                android:layout_width="194dp"
-                android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:text="Email:"
-                android:textSize="40sp"
-                android:textStyle="bold|italic" />
-
-            <TextView
-                android:id="@+id/FromTextView"
-                android:layout_width="194dp"
-                android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:text="From:"
-                android:textSize="40sp"
-                android:textStyle="bold|italic" />
-
-
-            <TextView
-                android:id="@+id/MyHoobiesTextView"
-                android:layout_width="237dp"
-                android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:text="My Hobbie:"
-                android:textSize="40sp"
-                android:textStyle="bold|italic" />
-
-            <LinearLayout
-                android:id="@+id/linearLayout5"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:gravity="center"
-                android:orientation="vertical"
-                android:textAlignment="center"></LinearLayout>
-
-            <TextView
-                android:id="@+id/textView15"
+                android:id="@+id/textView6"
                 android:layout_width="match_parent"
-                android:layout_height="22dp"
+                android:layout_height="wrap_content"
+                android:gravity="center"
                 android:text="Notifiction"
-                android:textAlignment="center"
-                android:textColor="#000000"
+                android:textSize="25dp"
                 android:textStyle="bold" />
 
-            <EditText
-                android:id="@+id/editTextTextEmailAddress3"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:inputType="textEmailAddress" />
+                android:layout_height="match_parent"
+                android:layout_margin="10dp"
+                android:elevation="5dp"
+                android:orientation="vertical">
+
+
+
+
+                <ImageView
+                    android:id="@+id/imageView5"
+                    android:layout_width="54dp"
+                    android:layout_height="60dp"
+                    android:layout_margin="10dp"
+                    android:background="@drawable/background_grey"
+                    android:layout_gravity="center"
+                    app:srcCompat="@drawable/editprofile_icon"
+                    />
+
+
+                <EditText
+                    android:id="@+id/MyNameTextView"
+                    android:layout_width="194dp"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:text="My name:"
+                    android:textSize="40sp"
+                    android:textStyle="bold|italic" />
+
+
+                <TextView
+                    android:id="@+id/MyEmailTextView"
+                    android:layout_width="194dp"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:text="Email:"
+                    android:textSize="40sp"
+                    android:textStyle="bold|italic" />
+
+                <TextView
+                    android:id="@+id/FromTextView"
+                    android:layout_width="194dp"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:text="From:"
+                    android:textSize="40sp"
+                    android:textStyle="bold|italic" />
+
+
+                <TextView
+                    android:id="@+id/MyHoobiesTextView"
+                    android:layout_width="237dp"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:text="My Hobbie:"
+                    android:textSize="40sp"
+                    android:textStyle="bold|italic" />
+
+                <LinearLayout
+                    android:id="@+id/linearLayout5"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:orientation="vertical"
+                    android:textAlignment="center"/>
+
+                <TextView
+                    android:id="@+id/textView15"
+                    android:layout_width="match_parent"
+                    android:layout_height="22dp"
+                    android:text="Notifiction"
+                    android:textAlignment="center"
+                    android:textColor="#000000"
+                    android:textStyle="bold" />
+
+                <EditText
+                    android:id="@+id/editTextTextEmailAddress3"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:ems="10"
+                    android:inputType="textEmailAddress" />
+            </LinearLayout>
+
+
+
         </LinearLayout>
 
-
-
-    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
