--- a/app/src/main/res/layout/activity_fitness.xml
+++ b/app/src/main/res/layout/activity_fitness.xml
@@ -4,9 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#f5f5f5"
-    tools:context=".Food">
-
+    tools:context=".Fitness">
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -20,8 +18,4 @@
             app:layout_constraintTop_toTopOf="@+id/linearLayout4"
             app:srcCompat="@drawable/search3" />
     </LinearLayout>
-
-
-
-
 </androidx.constraintlayout.widget.ConstraintLayout>
