--- a/app/src/main/res/layout/activity_searchpage.xml
+++ b/app/src/main/res/layout/activity_searchpage.xml
@@ -1,9 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginLeft="0dp"
     tools:context=".searchpage">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <EditText
+        android:id="@+id/SearchLine"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="80dp"
+        android:layout_marginTop="35dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:rotationY="2"
+        android:text="Search here..." />
+
+    <ImageButton
+        android:id="@+id/BtnSearchView"
+        android:layout_width="39dp"
+        android:layout_height="110dp"
+        android:layout_marginLeft="300dp"
+        android:layout_marginTop="10dp"
+        android:src="@drawable/ic_twotone_person_search_24" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerList"
+        android:layout_width="match_parent"
+        android:layout_height="585dp"
+        android:layout_marginTop="120dp"
+        android:layout_marginBottom="50dp"
+        android:paddingLeft="35dp"
+        android:paddingTop="15dp" />
+
+</RelativeLayout>
