--- a/app/src/main/res/layout/activity_food.xml
+++ b/app/src/main/res/layout/activity_food.xml
@@ -18,7 +18,7 @@
             android:layout_height="150dp"
             app:layout_constraintStart_toStartOf="@+id/linearLayout4"
             app:layout_constraintTop_toTopOf="@+id/linearLayout4"
-            app:srcCompat="@drawable/searchLine" />
+            app:srcCompat="@drawable/searchline" />
     </LinearLayout>
 
 
