--- a/app/src/main/res/layout/activity_scrol_borger.xml
+++ b/app/src/main/res/layout/activity_scrol_borger.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     tools:context=".ScrolBorger"
-    tools:openDrawer="start"
+    tools:openDrawer="end"
     tools:ignore="MissingClass">
 
 
