--- a/app/src/main/res/layout/activity_fitness_page.xml
+++ b/app/src/main/res/layout/activity_fitness_page.xml
@@ -36,7 +36,7 @@
                 android:layout_gravity="center"
                 android:layout_marginBottom="15dp"
                 android:scaleType="centerCrop"
-                android:src="@drawable/MaxxFitnessLOGO"
+                android:src="@drawable/maxx"
                 app:layout_collapseMode="parallax" />
 
             <androidx.appcompat.widget.Toolbar
