--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -49,15 +49,7 @@
             <item
                 android:id = "@+id/nav_log_out"
                 android:title="Log out"
-                android:icon="@drawable/logout_icon">
-                <Button
-
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:onClick="Logout"
-                    />
-            </item>
-
+                android:icon="@drawable/logout_icon"/>
 
         </menu>
     </item>
