--- a/app/src/main/res/layout/activity_paint.xml
+++ b/app/src/main/res/layout/activity_paint.xml
@@ -137,22 +137,20 @@
                 app:layout_constraintTop_toBottomOf="@+id/profile"
                 />
 
-            <Button
-
-                android:id="@+id/adopt"
+            <Space
                 android:layout_width="match_parent"
+                android:layout_height="400dp"
+                android:layout_weight="1"
+                tools:ignore="MissingConstraints" />
+
+            <TextView
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@drawable/button_bg"
-                android:paddingTop="10dp"
-                android:paddingBottom="10dp"
-                android:text="Comment"
-                android:textAllCaps="false"
-                android:textSize="18sp"
-                android:layout_marginTop="40dp"
+                android:text="@string/Paintlink"
+                android:layout_marginEnd="235dp"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView"/>
+                android:id="@+id/Paintlink"
+                tools:ignore="MissingConstraints" />
 
 
 
